--- a/CSS/font.css
+++ b/CSS/font.css
@@ -14,3 +14,13 @@ EJ:
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&display=swap" rel="stylesheet">
 </head>
+
+
+font-size: 60px;
+
+Sirve para aumentar o disminuir el texto segun la cantidad de px.
+
+
+font-weight: bold;
+
+Sirve para aclarar u oscurecer el texto.
